// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MediaControl > mount > base > should attach node to DOM tree 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color paused" data-playpause="" aria-label="playpause">/assets/icons/new/play.svg</button>
    
        <div class="media-control-indicator gcore-skin-text-color" data-position="">00:00</div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-duration="">00:00</div>
    
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        </div>
    
    
        <div class="media-control-center-panel" data-media-control="">
            
        </div>
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color" data-fullscreen="" aria-label="fullscreen">/assets/icons/new/fullscreen-off.svg</button>
    
        </div>
    
<div id="test-element">test</div></div>
<style>:root {}</style>"
`;

exports[`MediaControl > mount > center > should attach node to DOM tree 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color paused" data-playpause="" aria-label="playpause">/assets/icons/new/play.svg</button>
    
        <div class="media-control-indicator gcore-skin-text-color" data-position="">00:00</div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-duration="">00:00</div>
    
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        </div>
    
    
        <div class="media-control-center-panel" data-media-control="">
            
        <div id="test-element">test</div></div>
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color" data-fullscreen="" aria-label="fullscreen">/assets/icons/new/fullscreen-off.svg</button>
    
        </div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > mount > left > should attach node to DOM tree 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color paused" data-playpause="" aria-label="playpause">/assets/icons/new/play.svg</button>
    
        <div class="media-control-indicator gcore-skin-text-color" data-position="">00:00</div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-duration="">00:00</div>
    
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        <div id="test-element">test</div></div>
    
    
        <div class="media-control-center-panel" data-media-control="">
            
        </div>
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color" data-fullscreen="" aria-label="fullscreen">/assets/icons/new/fullscreen-off.svg</button>
    
        </div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > mount > right > should attach node to DOM tree 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color paused" data-playpause="" aria-label="playpause">/assets/icons/new/play.svg</button>
    
        <div class="media-control-indicator gcore-skin-text-color" data-position="">00:00</div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-duration="">00:00</div>
    
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        </div>
    
    
        <div class="media-control-center-panel" data-media-control="">
            
        </div>
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color" data-fullscreen="" aria-label="fullscreen">/assets/icons/new/fullscreen-off.svg</button>
    
        <div id="test-element">test</div></div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > mount > root > should attach node to DOM tree 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color paused" data-playpause="" aria-label="playpause">/assets/icons/new/play.svg</button>
    
        <div class="media-control-indicator gcore-skin-text-color" data-position="">00:00</div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-duration="">00:00</div>
    
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        </div>
    
    
        <div class="media-control-center-panel" data-media-control="">
            
        </div>
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color" data-fullscreen="" aria-label="fullscreen">/assets/icons/new/fullscreen-off.svg</button>
    
        </div>
    
</div>
<style>:root {}</style><div id="test-element">test</div>"
`;

exports[`MediaControl > rendering timing > once metadata is loaded > should wait a delay before rendering anything 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color paused" data-playpause="" aria-label="playpause">/assets/icons/new/play.svg</button>
    
        <div class="media-control-indicator gcore-skin-text-color" data-position="">00:00</div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-duration="">00:00</div>
    
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container volume-bar-hide" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        </div>
    
    
        <div class="media-control-center-panel" data-media-control="">
            
        <div class="bar-container" data-seekbar="">
            <div class="bar-background" data-seekbar="">
                <div class="bar-fill-1" data-seekbar=""></div>
                <div class="bar-fill-2 gcore-skin-main-color" data-seekbar="" style="width: 0%;"></div>
                <div class="bar-hover" data-seekbar=""></div>
            </div>
        </div>
        <div class="bar-scrubber" data-seekbar="" style="left: 0%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-seekbar=""></div>
        </div>
    
        </div>
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <button type="button" class="media-control-button media-control-icon gcore-skin-button-color" data-fullscreen="" aria-label="fullscreen">/assets/icons/new/fullscreen-off.svg</button>
    
        </div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > seekbar > should render 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-clips=""></div>
    
        </div>
    
    
        <div class="media-control-center-panel" data-media-control="">
            
        <div class="bar-container" data-seekbar="">
            <div class="bar-background" data-seekbar="">
                <div class="bar-fill-1" data-seekbar=""></div>
                <div class="bar-fill-2 gcore-skin-main-color" data-seekbar="" style="width: 0%;"></div>
                <div class="bar-hover" data-seekbar=""></div>
            </div>
        </div>
        <div class="bar-scrubber" data-seekbar="" style="left: 0%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-seekbar=""></div>
        </div>
    
        </div>
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        </div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > slot > audiotracks > should put the element according to layout 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-clips=""></div>
    
        </div>
    
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <div class="my-media-control gplayer-mc-panel-item" id="my-media-control" data-audiotracks="">test</div></div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > slot > cc > should put the element according to layout 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-clips=""></div>
    
        </div>
    
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <div class="my-media-control gplayer-mc-panel-item" id="my-media-control" data-cc="">test</div></div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > slot > clips > should put the element according to layout 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-clips=""></div>
    
        <div class="my-media-control gplayer-mc-panel-item" id="my-media-control" data-clips="">test</div></div>
    
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        </div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > slot > dvr > should put the element according to layout 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-clips=""></div>
    
        <div class="my-media-control gplayer-mc-panel-item" id="my-media-control" data-dvr="">test</div></div>
    
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        </div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > slot > gear > should put the element according to layout 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-clips=""></div>
    
        </div>
    
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <div class="my-media-control gplayer-mc-panel-item" id="my-media-control" data-gear="">test</div></div>
    
</div>
<style>:root {}</style>"
`;

exports[`MediaControl > slot > pip > should put the element according to layout 1`] = `
"<div class="media-control-background" data-background=""></div>

<div class="media-control-layer gcore-skin-bg-color" data-controls="">
    
    
    
    
    
    
    
    
    

    
    
        <div class="media-control-left-panel" data-media-control="">
            
        <div class="drawer-container" data-volume="">
            <div class="drawer-icon-container" data-volume="">
                <div class="drawer-icon media-control-icon gcore-skin-button-color" data-volume="">/assets/icons/new/volume-max.svg</div>
                <span class="drawer-text" data-volume=""></span>
            </div>
            
    <div class="bar-container" data-volume="">
        <div class="bar-background" data-volume="">
            <div class="bar-fill-1 gcore-skin-main-color" data-volume="" style="width: 100%;"></div>
        </div>
        <div class="bar-scrubber" data-volume="" style="left: 100%;">
            <div class="bar-scrubber-icon gcore-skin-main-color" data-volume=""></div>
        </div>
    </div>
    
        </div>
    
        <div class="media-control-indicator gcore-skin-text-color" data-clips=""></div>
    
        </div>
    
    
    
        <div class="media-control-right-panel" data-media-control="">
            
        <div class="my-media-control gplayer-mc-panel-item" id="my-media-control" data-pip="">test</div></div>
    
</div>
<style>:root {}</style>"
`;
